work on progres

--- a/covers.html
+++ b/covers.html
@@ -80,7 +80,7 @@
     </div>
 
 
-    <h1>Headphones</h1>
+    <h1>Covers</h1>
     <section class="coversection">
         <button class="scroll-button cover-scroll-btn-left" id="cover-left">&#10094;</button>
 
