--- a/index.html
+++ b/index.html
@@ -72,13 +72,35 @@
                 </a>
                 <ul class="products-list">
                     <li>
-                        <a href="">
+                        <a href="telefona.html">
                             <i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil
                         </a>
                     </li>
-                    <li><i class="fa-solid fa-headphones mobile-icon"></i>headphones</li>
-                    <li><i class="fa-solid fa-charging-station mobile-icon"></i>chargers</li>
-                    <li><i class="fa-solid fa-volume-high mobile-icon"></i>speakers</li>
+                    <li>
+                        <a href="headphones.html">
+                            <i class="fa-solid fa-headphones mobile-icon"></i>Headphones
+                        </a>
+                    </li>
+                    <li>
+                        <a href="chargers.html">
+                            <i class="fa-solid fa-charging-station mobile-icon"></i>Chargers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="speakers.html">
+                            <i class="fa-solid fa-headphones mobile-icon"></i>speakers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="covers.html">
+                            <i class="fa-solid fa-mobile mobile-icon"></i>Covers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="scooters.html">
+                            <i class="fa-solid fa-bicycle mobile-icon"></i>scooters
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li><a href="index.html">Home</a></li>
@@ -112,32 +134,28 @@
             <div class="left-menu">
                 <ul>
                     <li>
-                        <a href=""> <i class="fa-solid fa-mobile main-mobile-icon"></i>telefona mobil</a>
+                        <a href="telefona.html"> <i class="fa-solid fa-mobile main-mobile-icon"></i>telefona mobil</a>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-charging-station main-mobile-icon"></i>chargers</a>
+                        <a href="chargers.html"><i
+                                class="fa-solid fa-charging-station main-mobile-icon"></i>chargers</a>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-mobile main-mobile-icon"></i>Covers</a>
+                        <a href="covers.html"><i class="fa-solid fa-mobile main-mobile-icon"></i>Covers</a>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-headphones main-mobile-icon"></i>headphones</a>
+                        <a href="headphones.html"><i class="fa-solid fa-headphones main-mobile-icon"></i>headphones</a>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-music main-mobile-icon"></i>speakers</a>
+                        <a href="speakers.html"><i class="fa-solid fa-music main-mobile-icon"></i>speakers</a>
                     </li>
                     <li>
-                        <a href=""><i class="fa-solid fa-bicycle main-mobile-icon"></i>scooters</a>
-                    </li>
-                    <li>
-                        <a href=""><i class="fa-solid fa-desktop main-mobile-icon"></i>periferice</a>
-                    </li>
-                    <li>
-                        <a href=""><i class="fa-solid fa-bicycle main-mobile-icon"></i>scooters</a>
+                        <a href="scooters.html"><i class="fa-solid fa-bicycle main-mobile-icon"></i>scooters</a>
                     </li>
                     <li>
                         <a href=""><i class="fa-solid fa-desktop main-mobile-icon"></i>periferice</a>
                     </li>
+
 
                 </ul>
 
@@ -170,7 +188,7 @@
         <div class="phonecardscontainer" id="phonecardscontainer">
             <div class="phonecard card template">
                 <span class="about-product"></span>
-                <img class="phoneimage" src="" alt="Phone 1">
+                <img class="phoneimage image" src="" alt="Phone 1">
                 <h3 class="phonename"></h3>
                 <div class="phonedescription">
                 </div>
@@ -197,7 +215,7 @@
         <div class="headphonecardscontainer" id="headphonecardscontainer">
             <div class="headphonecard card template">
                 <span class="about-headphone"></span>
-                <img class="headphoneimage" src="" alt="Phone 1">
+                <img class="headphoneimage image" src="" alt="Phone 1">
                 <h3 class="headphonename"></h3>
                 <div class="headphonedescription">
                 </div>
@@ -225,7 +243,7 @@
         <div class="speakercardscontainer" id="speakercardscontainer">
             <div class="speakercard card template">
                 <span class="about-speaker"></span>
-                <img class="speakerimage" src="" alt="Phone 1">
+                <img class="speakerimage image" src="" alt="Phone 1">
                 <h3 class="speakername"></h3>
                 <div class="speakerdescription">
                 </div>
@@ -252,7 +270,7 @@
         <div class="covercardscontainer" id="covercardscontainer">
             <div class="covercard card template">
                 <span class="about-cover"></span>
-                <img class="coverimage" src="" alt="Phone 1">
+                <img class="coverimage image" src="" alt="Phone 1">
                 <h3 class="covername"></h3>
                 <div class="coverdescription">
                 </div>
@@ -280,7 +298,7 @@
         <div class="chargercardscontainer" id="chargercardscontainer">
             <div class="chargercard card template">
                 <span class="about-charger"></span>
-                <img class="chargerimage" src="" alt="Phone 1">
+                <img class="chargerimage image" src="" alt="Phone 1">
                 <h3 class="chargername"></h3>
                 <div class="chargerdescription">
                 </div>
@@ -307,7 +325,7 @@
         <div class="scootercardscontainer" id="scootercardscontainer">
             <div class="scootercard card template">
                 <span class="about-scooter"></span>
-                <img class="scooterimage" src="" alt="Phone 1">
+                <img class="scooterimage image" src="" alt="Phone 1">
                 <h3 class="scootername"></h3>
                 <div class="scooterdescription">
                 </div>
