--- a/product.html
+++ b/product.html
@@ -109,13 +109,18 @@
 
                         <div class="option-group">
                             <label>Zgjidh Memorie:</label>
-                            <select id="storage-select"></select>
+                            <div id="storage-options" class="option-box"></div>
                         </div>
 
                         <div class="option-group">
                             <label>Zgjidh Ngjyra:</label>
-                            <select id="color-select"></select>
+                            <div id="color-options" class="option-box"></div>
                         </div>
+                        <div class="option-group">
+                            <label>Cilesia:</label>
+                            <div id="state-options" class="option-box"></div>
+                        </div>
+
 
                         <div>
                             <p id="product-description" class="product-description">
@@ -123,6 +128,8 @@
                             </p>
 
                         </div>
+                        
+
 
                     </div>
 
