--- a/scooters.html
+++ b/scooters.html
@@ -80,7 +80,7 @@
     </div>
 
 
-    <h1>Headphones</h1>
+    <h1>Scooters</h1>
     <section class="scootersection">
         <button class="scroll-button scooter-scroll-btn-left" id="scooter-left">&#10094;</button>
 
