work on progres

--- a/kontakto.html
+++ b/kontakto.html
@@ -55,7 +55,7 @@
 
     <!-- Ketu mbaron headeri kryesor -->
     <!-- Ketu fillon headeri i dyte i nav bar -->
-    <div class="secondary-header">
+  <div class="secondary-header">
         <ul class="ul-nav-secondary-header">
             <li class="show-products-list">
                 <a href="#">
@@ -68,9 +68,31 @@
                             <i class="fa-solid fa-mobile mobile-icon"></i>Telefona mobil
                         </a>
                     </li>
-                    <li><i class="fa-solid fa-headphones mobile-icon"></i>headphones</li>
-                    <li><i class="fa-solid fa-charging-station mobile-icon"></i>chargers</li>
-                    <li><i class="fa-solid fa-volume-high mobile-icon"></i>speakers</li>
+                    <li>
+                        <a href="headphones.html">
+                            <i class="fa-solid fa-headphones mobile-icon"></i>Headphones
+                        </a>
+                    </li>
+                    <li>
+                        <a href="chargers.html">
+                            <i class="fa-solid fa-charging-station mobile-icon"></i>Chargers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="speakers.html">
+                            <i class="fa-solid fa-headphones mobile-icon"></i>speakers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="covers.html">
+                            <i class="fa-solid fa-mobile mobile-icon"></i>Covers
+                        </a>
+                    </li>
+                    <li>
+                        <a href="scooters.html">
+                            <i class="fa-solid fa-bicycle mobile-icon"></i>scooters
+                        </a>
+                    </li>
                 </ul>
             </li>
             <li><a href="index.html">Home</a></li>
