--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobilestyles.css">
     <link rel="stylesheet" href="headphones.css">
     <link rel="stylesheet" href="speakers.css">
     <link rel="stylesheet" href="covers.css ">
@@ -18,7 +19,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script type="module" src="script.js" async></script>
+    <script type="module" src="script.js" defer></script>
+    <script type="module" src="test.js" defer></script>
 
 
 
@@ -34,7 +36,10 @@
 
             </div>
             <div class="search-container">
-                <input class="search-input" type="text" placeholder="Kerko produktin qe deshironi...">
+                <input class="search-input" type="text" placeholder="Kerko produktin...">
+                <div id="search-overlay"></div>
+                <div id="search-results"></div>
+
                 <span class="material-symbols-outlined">
                     search
                 </span>
@@ -113,21 +118,7 @@
 
     <!-- Ketu mbaron headeri i dyte i nav bar -->
     <!-- ketu fillon afisimi permbajtjes se faqes -->
-    <section class="contain">
-        <div class="about-contain">
-            <div class="main-container">
-                <span class="preview-contain">mobile Phones</span>
-                <img class="image-contain" src="">
-                <span class="redirect-contain">
-                    <a href="telefona.html" class="icon-contain-link">
-                        <span class="icon-contain">
-                            <i class="fa-solid fa-arrow-up-right-from-square"></i></span></a>
-                    <span class="tooltip-text">shiko produket</span>
-                </span>
 
-            </div>
-        </div>
-    </section>
 
     <section class="main-section">
         <div class="main-div">
@@ -178,168 +169,164 @@
         </div>
 
     </section>
+    <section class="contain">
+        <div class="about-contain">
+            <div class="main-container">
+                <span class="preview-contain">mobile Phones</span>
+                <img class="image-contain" src="">
+                <span class="redirect-contain">
+                    <a href="telefona.html" class="icon-contain-link">
+                        <span class="icon-contain">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i></span></a>
+                    <span class="tooltip-text">shiko produket</span>
+                </span>
+
+            </div>
+        </div>
+        <div class="contain-dots"></div>
+    </section>
 
     <!-- ketu fillon seksioni i telefonave -->
+    <!-- Telefonat mobile -->
     <h1>Telefonat mobile</h1>
     <section class="phonesection">
         <button class="scroll-button scroll-btn-left" id="phone-left">&#10094;</button>
-
 
         <div class="phonecardscontainer" id="phonecardscontainer">
             <div class="phonecard card template">
                 <span class="about-product"></span>
                 <img class="phoneimage image" src="" alt="Phone 1">
                 <h3 class="phonename"></h3>
-                <div class="phonedescription">
-                </div>
+                <div class="phonedescription"></div>
                 <div class="buyphone">
                     <span class="phoneprice"></span>
-                    <button class="buyphone-btn" id="add-to-cart-btn"><i class="fa-solid fa-cart-shopping"></i>
+                    <button class="buyphone-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
-
                     </button>
-
                 </div>
             </div>
-
         </div>
+        <div id="phone-carousel-dots" class="carousel-dots"></div>
 
         <button class="scroll-button scroll-btn-right" id="phone-right">&#10095;</button>
     </section>
 
+    <!-- Headphones -->
     <h1>Headphones</h1>
     <section class="headphonesection">
         <button class="scroll-button headphone-scroll-btn-left" id="headphone-left">&#10094;</button>
 
-
         <div class="headphonecardscontainer" id="headphonecardscontainer">
             <div class="headphonecard card template">
                 <span class="about-headphone"></span>
-                <img class="headphoneimage image" src="" alt="Phone 1">
+                <img class="headphoneimage image" src="" alt="Headphone 1">
                 <h3 class="headphonename"></h3>
-                <div class="headphonedescription">
-                </div>
+                <div class="headphonedescription"></div>
                 <div class="buyheadphone">
                     <span class="headphoneprice"></span>
                     <button class="buyheadphone-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
-
                     </button>
-
                 </div>
             </div>
-
         </div>
+        <div class="carousel-dots" id="headphone-carousel-dots"></div>
 
         <button class="scroll-button headphone-scroll-btn-right" id="headphone-right">&#10095;</button>
     </section>
 
-
-    <h1>speakers</h1>
+    <!-- Speakers -->
+    <h1>Speakers</h1>
     <section class="speakersection">
         <button class="scroll-button speaker-scroll-btn-left" id="speaker-left">&#10094;</button>
-
 
         <div class="speakercardscontainer" id="speakercardscontainer">
             <div class="speakercard card template">
                 <span class="about-speaker"></span>
-                <img class="speakerimage image" src="" alt="Phone 1">
+                <img class="speakerimage image" src="" alt="Speaker 1">
                 <h3 class="speakername"></h3>
-                <div class="speakerdescription">
-                </div>
+                <div class="speakerdescription"></div>
                 <div class="buyspeaker">
                     <span class="speakerprice"></span>
                     <button class="buyspeaker-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
-
                     </button>
-
                 </div>
             </div>
-
         </div>
+        <div class="carousel-dots" id="speaker-carousel-dots"></div>
 
         <button class="scroll-button speaker-scroll-btn-right" id="speaker-right">&#10095;</button>
     </section>
 
+    <!-- Covers -->
     <h1>Covers</h1>
     <section class="coversection">
         <button class="scroll-button cover-scroll-btn-left" id="cover-left">&#10094;</button>
 
-
         <div class="covercardscontainer" id="covercardscontainer">
             <div class="covercard card template">
                 <span class="about-cover"></span>
-                <img class="coverimage image" src="" alt="Phone 1">
+                <img class="coverimage image" src="" alt="Cover 1">
                 <h3 class="covername"></h3>
-                <div class="coverdescription">
-                </div>
+                <div class="coverdescription"></div>
                 <div class="buycover">
                     <span class="coverprice"></span>
                     <button class="buycover-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
-
                     </button>
-
                 </div>
             </div>
-
         </div>
+        <div class="carousel-dots" id="cover-carousel-dots"></div>
 
         <button class="scroll-button cover-scroll-btn-right" id="cover-right">&#10095;</button>
     </section>
 
-
+    <!-- Chargers -->
     <h1>Chargers</h1>
     <section class="chargersection">
         <button class="scroll-button charger-scroll-btn-left" id="charger-left">&#10094;</button>
 
-
         <div class="chargercardscontainer" id="chargercardscontainer">
             <div class="chargercard card template">
                 <span class="about-charger"></span>
-                <img class="chargerimage image" src="" alt="Phone 1">
+                <img class="chargerimage image" src="" alt="Charger 1">
                 <h3 class="chargername"></h3>
-                <div class="chargerdescription">
-                </div>
+                <div class="chargerdescription"></div>
                 <div class="buycharger">
                     <span class="chargerprice"></span>
                     <button class="buycharger-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
-
                     </button>
-
                 </div>
             </div>
-
         </div>
+        <div class="carousel-dots" id="charger-carousel-dots"></div>
 
         <button class="scroll-button charger-scroll-btn-right" id="charger-right">&#10095;</button>
     </section>
 
+    <!-- Scooters -->
     <h1>Scooters</h1>
     <section class="scootersection">
         <button class="scroll-button scooter-scroll-btn-left" id="scooter-left">&#10094;</button>
 
-
         <div class="scootercardscontainer" id="scootercardscontainer">
             <div class="scootercard card template">
                 <span class="about-scooter"></span>
-                <img class="scooterimage image" src="" alt="Phone 1">
+                <img class="scooterimage image" src="" alt="Scooter 1">
                 <h3 class="scootername"></h3>
-                <div class="scooterdescription">
-                </div>
+                <div class="scooterdescription"></div>
                 <div class="buyscooter">
                     <span class="scooterprice"></span>
                     <button class="buyscooter-btn"><i class="fa-solid fa-cart-shopping"></i>
                         <span class="tooltip-text-btn">Shto ne koshin tim</span>
-
                     </button>
-
                 </div>
             </div>
-
         </div>
+        <div class="carousel-dots" id="scooter-carousel-dots"></div>
 
         <button class="scroll-button scooter-scroll-btn-right" id="scooter-right">&#10095;</button>
     </section>
