--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                 <input class="search-input" type="text" placeholder="Kerko produktin...">
                 <div id="search-overlay"></div>
                 <div id="search-results"></div>
+                <div id="search-count" style="font-weight:bold; margin:10px 0;"></div>
+
 
                 <span class="material-symbols-outlined">
                     search
