work on progres office mega

--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 
             </div>
             <div class="search-container">
-                <input class="search-input" type="text" placeholder="Kerko produktin qe deshironi...">
+                <input class="search-input" type="text" placeholder="Kerko produktin...">
                 <span class="material-symbols-outlined">
                     search
                 </span>
