creare server node js generating emails

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script type="module" src="script.js" defer></script>
     <script type="module" src="test.js" defer></script>
-    <script type="module" src="firebase.js" defer></script>
+    <!-- <script type="module" src="firebase.js" defer></script> -->
+    <script type="module" src="cart.js" defer></script>
 
 
 
@@ -33,7 +34,6 @@
         <div class="pre-header">
             <div class="header-span">
                 <img class="main-logo" src="images/mainlogo.png">
-
 
             </div>
             <div class="search-container">
@@ -69,7 +69,6 @@
         </div>
     </header>
 
-    <!-- Ketu mbaron headeri kryesor -->
     <!-- Ketu fillon headeri i dyte i nav bar -->
     <div class="secondary-header">
         <ul class="ul-nav-secondary-header">
