--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script type="module" src="cart.js" defer></script>
 </head>
 
 <body>
@@ -108,7 +109,7 @@
 
                     <button type="submit" class="btn btn-primary confirm-order">Konfirmo porosinë</button>
                 </form>
-                 
+
                 <button id="close-popup" class="btn btn-danger close-btn">Mbylle</button>
             </div>
         </div>
