--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,22 @@
   </div>
 
   <div id="orders-container">
-    <h1>Comenzile Tale</h1>
+    
+    <div class="orders-nav">
+
+      <nav>
+        <ul>
+          <li class="all active" data-filter="all"><a href="#">Te gjitha</a></li>
+          <li class="new" data-filter="new"><a href="#">Porosite e reja</a></li>
+          <li class="procces" data-filter="processed"><a href="#">Porosi ne proces</a></li>
+          <li class="finished" data-filter="finished"><a href="#">Porosi te perfunduara</a></li>
+
+        </ul>
+      </nav>
+
+    </div>
+
+
     <div id="orders-list">Se încarcă comenzile...</div>
   </div>
 
