https://github.com/kostakuqo/megaelectronicprivat.gihttps://github.com/kostakuqo/megaelectronicprivat.gip

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,14 +14,14 @@
 
   <div id="login-container">
     <h1>Login Vânzător</h1>
-    <input type="email" id="email" placeholder="Email vânzător">
+    <input type="email" id="email" placeholder="Email shites">
     <input type="password" id="password" placeholder="Parola">
     <button id="login-btn" class="login-btn">Login</button>
     <p id="login-error"></p>
   </div>
 
   <div id="orders-container">
-    
+
     <div class="orders-nav">
 
       <nav>
@@ -37,7 +37,7 @@
     </div>
 
 
-    <div id="orders-list">Se încarcă comenzile...</div>
+    <div id="orders-list">Po ngarkohen porosite...</div>
   </div>
 
   <script>
