--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script type="module" src="script.js" defer></script>
     <script type="module" src="test.js" defer></script>
-    <script type="module" src="cart.js" de></script>
+    <script type="module" src="cart.js" defer></script>
 
 
 
